--- a/package.json
+++ b/package.json
@@ -4,31 +4,20 @@
   "description": "A demo about authentication using jwt",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Olanetsoft/jwt-project.git"
-  },
-  "keywords": [
-    "jwt",
-    "node",
-    "authentication"
-  ],
-  "author": "Idris Olubisi",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Olanetsoft/jwt-project/issues"
-  },
-  "homepage": "https://github.com/Olanetsoft/jwt-project#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.10"
+    "mongoose": "^5.12.10",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^3.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
