--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A demo about authentication using jwt",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "./node_modules/.bin/netlify-lambda build src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "license": "ISC",
   "dependencies": {
