--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "node index.js"
+    "dev": "nodemon index.js"
   },
   "license": "ISC",
   "dependencies": {
@@ -17,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "netlify-lambda": "^2.0.15",
+    "node": "^19.6.0",
     "serverless-http": "^3.1.1"
   },
   "devDependencies": {
